--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,15 +16,18 @@ name: Release
 
 on:
   push:
-    branches:
-    - 'release-*'
+    tags:
+    - 'v*'
 
 jobs:
   release:
     runs-on: ubuntu-latest
+
     env:
       CGO_ENABLED: '0'
+      KO_VERSION: '0.8.3'
       REGISTRY: ghcr.io
+
     permissions:
       contents: write
       packages: write
@@ -49,14 +52,23 @@ jobs:
     - name: Set env vars
       run: |
         echo IMAGE_REPO=$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
-        echo VERSION=${GITHUB_REF#refs/heads/release-} >> $GITHUB_ENV
+        echo VERSION=${GITHUB_REF#refs/tags/} >> $GITHUB_ENV
         echo COMMITISH=$(git rev-parse HEAD) >> $GITHUB_ENV
 
     - name: Set flags
       run: echo GOFLAGS="-v -trimpath -ldflags=-s" >> $GITHUB_ENV
 
     - name: Print env
-      run: go env
+      run: |
+        echo PATH=$PATH
+        go env
+
+    - name: Run unit tests
+      run: go test -v -count=1 -short -timeout=3m -vet=asmdecl,assign,atomic,bools,buildtag,cgocall,composites,copylocks,errorsas,httpresponse,loopclosure,lostcancel,nilfunc,printf,shift,stdmethods,structtag,tests,unmarshal,unreachable,unsafeptr,unusedresult ./...
+
+    - name: Populate version number in embedded file
+      run: |
+        echo "$VERSION" > pkg/version/version.txt
 
     - name: Build binaries
       run: |
@@ -71,15 +83,15 @@ jobs:
     - name: Install ko
       run: |
         mkdir -p $(go env GOPATH)/bin
-        curl -sSL "https://github.com/google/ko/releases/download/v0.8.3/ko_0.8.3_Linux_x86_64.tar.gz" | tar -xzC $(go env GOPATH)/bin ko
+        curl -sSL "https://github.com/google/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" | tar -xzC $(go env GOPATH)/bin ko
 
     - name: Build and push container image
       run: |
-        $(go env GOPATH)/bin/ko login ${{ env.REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+        $(go env GOPATH)/bin/ko login $REGISTRY -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
         echo -n 'IMAGE_NAME_WITH_DIGEST=' >> $GITHUB_ENV
-        $(go env GOPATH)/bin/ko publish . --bare --image-label org.opencontainers.image.source=${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }} --platform linux/amd64,linux/arm64 --tags latest,$VERSION >> $GITHUB_ENV
+        $(go env GOPATH)/bin/ko publish . --bare --image-label org.opencontainers.image.source="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" --platform linux/amd64,linux/arm64 --tags "$VERSION" >> $GITHUB_ENV
       env:
-        KO_DOCKER_REPO: ghcr.io/${{ env.IMAGE_REPO }}
+        KO_DOCKER_REPO: ${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}
 
     - name: Create release body file
       run: |
@@ -88,7 +100,7 @@ jobs:
 
         GitHub Container Registry:
 
-            ghcr.io/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}
+            $REGISTRY/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}
         EOF
 
     - name: Create release
