--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ name: Release
 on:
   push:
     tags:
-    - 'v*'
+    - 'v*-rc*'
 
 jobs:
   release:
@@ -52,7 +52,8 @@ jobs:
     - name: Set env vars
       run: |
         echo IMAGE_REPO=$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
-        echo VERSION=${GITHUB_REF#refs/tags/} >> $GITHUB_ENV
+        RC_VERSION=${GITHUB_REF#refs/tags/}
+        echo VERSION=${RC_VERSION%-rc*} >> $GITHUB_ENV
         echo COMMITISH=$(git rev-parse HEAD) >> $GITHUB_ENV
 
     - name: Set flags
