--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
     env:
       CGO_ENABLED: '0'
       KO_VERSION: '0.8.3'
+      KPT_VERSION: v1.0.0-beta.1
       REGISTRY: ghcr.io
 
     permissions:
@@ -83,14 +84,25 @@ jobs:
 
     - name: Install ko
       run: |
-        mkdir -p $(go env GOPATH)/bin
-        curl -sSL "https://github.com/google/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" | tar -xzC $(go env GOPATH)/bin ko
+        mkdir -p ${HOME}/.local/bin
+        curl -sSL "https://github.com/google/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" | tar -xzC ${HOME}/.local/bin ko
 
     - name: Build and push container image
       run: |
-        $(go env GOPATH)/bin/ko login $REGISTRY -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+        ko login $REGISTRY -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
         echo -n 'IMAGE_NAME_WITH_DIGEST=' >> $GITHUB_ENV
-        $(go env GOPATH)/bin/ko publish . --bare --image-label org.opencontainers.image.source="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" --platform linux/amd64,linux/arm64 --tags "$VERSION" >> $GITHUB_ENV
+        ko publish . \
+          --bare \
+          --image-label org.opencontainers.image.licenses="Apache-2.0" \
+          --image-label org.opencontainers.image.revision="$GITHUB_SHA" \
+          --image-label org.opencontainers.image.source="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" \
+          --image-label org.opencontainers.image.title="${GITHUB_REPOSITORY#*/}" \
+          --image-label org.opencontainers.image.url="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" \
+          --image-label org.opencontainers.image.vendor="Company LLC" \
+          --image-label org.opencontainers.image.version="$VERSION" \
+          --platform linux/amd64,linux/arm64 \
+          --tags latest,$VERSION \
+          >> $GITHUB_ENV
       env:
         KO_DOCKER_REPO: ${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}
 
@@ -165,7 +177,13 @@ jobs:
         asset_name: SHA256SUMS
         asset_content_type: text/plain
 
-    - name: Update main branch with version number in readme
+    - name: Install kpt
+      run: |
+        mkdir -p ${HOME}/.local/bin
+        curl -sSLo ${HOME}/.local/bin/kpt "https://github.com/GoogleContainerTools/kpt/releases/download/${KPT_VERSION}/kpt_linux_amd64"
+        chmod +x ${HOME}/.local/bin/kpt
+
+    - name: Prepare for main branch update
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
@@ -173,8 +191,21 @@ jobs:
         git remote update
         git checkout main
         git pull --no-edit --no-rebase --strategy-option=theirs origin
+
+    - name: Set image name in Kubernetes resource spec
+      run: |
+        kpt fn eval manifests \
+          --image gcr.io/kpt-fn/apply-setters:v0.1.1@sha256:d2a0219b24a47ebb4bf568d3ccf5bb0e7be2f3f94b28b0c3b1bed011a51d7c35 \
+          -- \
+          "image=$REGISTRY/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}"
+
+    - name: Update main branch with version number in readme
+      run: |
         sed -i~ "s/VERSION=.*/VERSION=$VERSION/" README.md
-        git add README.md
-        git commit -m "Update version in readme to $VERSION"
+
+    - name: Commit and push to main branch with new version number and image ref
+      run: |
+        git add README.md manifests
+        git commit -m "Update version in readme and manifests to $VERSION"
         git pull --no-edit --no-rebase --strategy-option=ours origin
         git push origin main
