--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ name: Release
 on:
   push:
     tags:
-    - 'v*-rc*'
+    - 'v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+'
     paths-ignore:
     - '**.md'
     - 'docs/**'
@@ -53,15 +53,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
 
-    - name: Set env vars
+    - name: Set image env vars
       run: |
         echo IMAGE_REPO=$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
         RC_VERSION=${GITHUB_REF#refs/tags/}
         echo VERSION=${RC_VERSION%-rc*} >> $GITHUB_ENV
-        echo COMMITISH=$(git rev-parse HEAD) >> $GITHUB_ENV
-
-    - name: Set flags
-      run: echo GOFLAGS="-v -trimpath -ldflags=-s" >> $GITHUB_ENV
 
     - name: Print env
       run: |
@@ -69,11 +65,43 @@ jobs:
         go env
 
     - name: Run unit tests
-      run: go test -v -count=1 -short -timeout=3m -vet=asmdecl,assign,atomic,bools,buildtag,cgocall,composites,copylocks,errorsas,httpresponse,loopclosure,lostcancel,nilfunc,printf,shift,stdmethods,structtag,tests,unmarshal,unreachable,unsafeptr,unusedresult ./...
+      run: |
+        go test -v -count=1 -short -timeout=3m -vet=asmdecl,assign,atomic,bools,buildtag,cgocall,composites,copylocks,errorsas,httpresponse,loopclosure,lostcancel,nilfunc,printf,shift,stdmethods,structtag,tests,unmarshal,unreachable,unsafeptr,unusedresult ./...
+
+    - name: Install ko
+      run: |
+        mkdir -p ${HOME}/.local/bin
+        curl -sSL "https://github.com/google/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" | tar -xzC ${HOME}/.local/bin ko
+
+    - name: Install kpt
+      run: |
+        mkdir -p ${HOME}/.local/bin
+        curl -sSLo ${HOME}/.local/bin/kpt "https://github.com/GoogleContainerTools/kpt/releases/download/${KPT_VERSION}/kpt_linux_amd64"
+        chmod +x ${HOME}/.local/bin/kpt
+
+    - name: Create release branch
+      run: |
+        git checkout -B release-$VERSION
 
     - name: Populate version number in embedded file
       run: |
         echo "$VERSION" > pkg/version/version.txt
+
+    - name: Commit and push to release branch with new version number
+      run: |
+        git add pkg/version/version.txt
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git commit -m "Update binary version to $VERSION"
+        git push --force origin release-$VERSION
+
+    - name: Set build env vars
+      run: |
+        echo BUILD_REVISION=$(git rev-parse HEAD) >> $GITHUB_ENV
+
+    - name: Set Go flags
+      run: |
+        echo GOFLAGS="-v -trimpath -ldflags=-s" >> $GITHUB_ENV
 
     - name: Build binaries
       run: |
@@ -85,11 +113,6 @@ jobs:
     - name: Create checksums
       run: shasum -a 256 ghcr-actions-test_* > SHA256SUMS
 
-    - name: Install ko
-      run: |
-        mkdir -p ${HOME}/.local/bin
-        curl -sSL "https://github.com/google/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" | tar -xzC ${HOME}/.local/bin ko
-
     - name: Build and push container image
       run: |
         ko login $REGISTRY -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
@@ -97,7 +120,7 @@ jobs:
         ko publish . \
           --bare \
           --image-label org.opencontainers.image.licenses="Apache-2.0" \
-          --image-label org.opencontainers.image.revision="$GITHUB_SHA" \
+          --image-label org.opencontainers.image.revision="$BUILD_REVISION" \
           --image-label org.opencontainers.image.source="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" \
           --image-label org.opencontainers.image.title="${GITHUB_REPOSITORY#*/}" \
           --image-label org.opencontainers.image.url="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" \
@@ -118,6 +141,23 @@ jobs:
 
             $REGISTRY/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}
         EOF
+
+    - name: Set image name in Kubernetes resource spec
+      run: |
+        kpt fn eval manifests \
+          --image gcr.io/kpt-fn/apply-setters:v0.1.1@sha256:d2a0219b24a47ebb4bf568d3ccf5bb0e7be2f3f94b28b0c3b1bed011a51d7c35 \
+          -- \
+          "image=$REGISTRY/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}"
+
+    - name: Commit and push to release branch with new image ref
+      run: |
+        git add manifests
+        git commit -m "Update image version in manifest to $VERSION"
+        git push --force origin release-$VERSION
+
+    - name: Set release env vars
+      run: |
+        echo COMMITISH=$(git rev-parse HEAD) >> $GITHUB_ENV
 
     - name: Create release
       id: create_release
@@ -180,12 +220,6 @@ jobs:
         asset_name: SHA256SUMS
         asset_content_type: text/plain
 
-    - name: Install kpt
-      run: |
-        mkdir -p ${HOME}/.local/bin
-        curl -sSLo ${HOME}/.local/bin/kpt "https://github.com/GoogleContainerTools/kpt/releases/download/${KPT_VERSION}/kpt_linux_amd64"
-        chmod +x ${HOME}/.local/bin/kpt
-
     - name: Prepare for main branch update
       run: |
         git config user.name github-actions
@@ -195,20 +229,20 @@ jobs:
         git checkout main
         git pull --no-edit --no-rebase --strategy-option=theirs origin
 
-    - name: Set image name in Kubernetes resource spec
-      run: |
-        kpt fn eval manifests \
-          --image gcr.io/kpt-fn/apply-setters:v0.1.1@sha256:d2a0219b24a47ebb4bf568d3ccf5bb0e7be2f3f94b28b0c3b1bed011a51d7c35 \
-          -- \
-          "image=$REGISTRY/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}"
-
     - name: Update main branch with version number in readme
       run: |
         sed -i~ "s/VERSION=.*/VERSION=$VERSION/" README.md
 
-    - name: Commit and push to main branch with new version number and image ref
+    - name: Update version in readme on main branch
       run: |
-        git add README.md manifests
-        git commit -m "Update version in readme and manifests to $VERSION"
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git reset --hard
+        git remote update
+        git checkout main
+        git pull --no-edit --no-rebase --strategy-option=theirs origin
+        sed -i~ "s/VERSION=.*/VERSION=$VERSION/" README.md
+        git add README.md
+        git commit -m "Update version in readme to $VERSION"
         git pull --no-edit --no-rebase --strategy-option=ours origin
         git push origin main
