--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,17 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      CGO_ENABLED: '0'
-      KO_VERSION: '0.8.3'
-      KPT_VERSION: v1.0.0-beta.1
       REGISTRY: ghcr.io
+      CGO_ENABLED: '0'
+      GGCR_VERSION: v0.7.0
+      KPT_VERSION: v1.0.0-beta.9
+      KUSTOMIZE_VERSION: v4.4.1
+      SKAFFOLD_VERSION: 524a6b3914101af15fadf2eb3489e578a9c71f78
+      SKAFFOLD_CACHE_ARTIFACTS: 'false'
+      SKAFFOLD_DETECT_MINIKUBE: 'false'
+      SKAFFOLD_INTERACTIVE: 'false'
+      SKAFFOLD_OFFLINE: 'true'
+      SKAFFOLD_UPDATE_CHECK: 'false'
 
     permissions:
       contents: write
@@ -59,7 +66,7 @@ jobs:
         RC_VERSION=${GITHUB_REF#refs/tags/}
         echo VERSION=${RC_VERSION%-rc*} >> $GITHUB_ENV
 
-    - name: Print env
+    - name: Print Go env
       run: |
         echo HOME=$HOME
         echo PATH=$PATH
@@ -69,16 +76,39 @@ jobs:
       run: |
         go test -v -count=1 -short -timeout=3m -vet=asmdecl,assign,atomic,bools,buildtag,cgocall,composites,copylocks,errorsas,httpresponse,loopclosure,lostcancel,nilfunc,printf,shift,stdmethods,structtag,tests,unmarshal,unreachable,unsafeptr,unusedresult ./...
 
-    - name: Install ko
+    - name: Install crane
       run: |
         mkdir -p ${HOME}/.local/bin
-        curl -sSL "https://github.com/google/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_x86_64.tar.gz" | tar -xzC ${HOME}/.local/bin ko
+        curl -sSL "https://github.com/google/go-containerregistry/releases/download/${GGCR_VERSION}/go-containerregistry_$(uname -s)_$(uname -m).tar.gz" | tar -xzC ${HOME}/.local/bin crane
 
-    - name: Install kpt
+    name: Install kpt
       run: |
         mkdir -p ${HOME}/.local/bin
-        curl -sSLo ${HOME}/.local/bin/kpt "https://github.com/GoogleContainerTools/kpt/releases/download/${KPT_VERSION}/kpt_linux_amd64"
+        curl -sSLo ${HOME}/.local/bin/kpt "https://github.com/GoogleContainerTools/kpt/releases/download/${KPT_VERSION}/kpt_$(go env GOOS)_$(go env GOARCH)"
         chmod +x ${HOME}/.local/bin/kpt
+
+    - name: Install kustomize
+      run: |
+        mkdir -p ${HOME}/.local/bin
+        curl -sSL "https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2F${KUSTOMIZE_VERSION}/kustomize_${KUSTOMIZE_VERSION}_$(go env GOOS)_$(go env GOARCH).tar.gz" | tar -xzC ${HOME}/.local/bin kustomize
+
+    # - name: Install Skaffold
+    #   run: |
+    #     mkdir -p ${HOME}/.local/bin
+    #     curl -sSLo ${HOME}/.local/bin/skaffold "https://storage.googleapis.com/skaffold/releases/${SKAFFOLD_VERSION}/skaffold-$(go env GOOS)-$(go env GOARCH)"
+    #     chmod +x ${HOME}/.local/bin/skaffold
+
+    - name: Clone Skaffold
+      run: |
+        SKAFFOLD_SRC=$(mktemp -d)
+        echo SKAFFOLD_SRC=$SKAFFOLD_SRC >> $GITHUB_ENV
+        git clone --no-checkout https://github.com/GoogleContainerTools/skaffold.git $SKAFFOLD_SRC
+
+    - name: Build Skaffold
+      run: |
+        git checkout $SKAFFOLD_VERSION
+        go build -o ${HOME}/.local/bin/skaffold ./cmd/skaffold
+      working-directory: ${{ env.SKAFFOLD_SRC }}
 
     - name: Create release branch
       run: |
@@ -98,7 +128,9 @@ jobs:
 
     - name: Set build env vars
       run: |
-        echo BUILD_REVISION=$(git rev-parse HEAD) >> $GITHUB_ENV
+        echo REVISION=$(git rev-parse HEAD) >> $GITHUB_ENV
+        echo SOURCE=${{ github.server_url }}/${{ github.repository }} >> $GITHUB_ENV
+        echo URL=${{ github.server_url }}/${{ github.repository }} >> $GITHUB_ENV
 
     - name: Set Go flags
       run: |
@@ -111,27 +143,32 @@ jobs:
         GOOS=linux GOARCH=amd64 go build -o ghcr-actions-test_Linux_x86_64 .
         GOOS=linux GOARCH=arm64 go build -o ghcr-actions-test_Linux_aarch64 .
 
-    - name: Create checksums
-      run: shasum -a 256 ghcr-actions-test_* > SHA256SUMS
-
     - name: Build and push container image
       run: |
-        ko login $REGISTRY -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
-        echo -n 'IMAGE_NAME_WITH_DIGEST=' >> $GITHUB_ENV
-        ko publish . \
-          --bare \
-          --image-label org.opencontainers.image.licenses="Apache-2.0" \
-          --image-label org.opencontainers.image.revision="$BUILD_REVISION" \
-          --image-label org.opencontainers.image.source="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" \
-          --image-label org.opencontainers.image.title="${GITHUB_REPOSITORY#*/}" \
-          --image-label org.opencontainers.image.url="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}" \
-          --image-label org.opencontainers.image.vendor="Company LLC" \
-          --image-label org.opencontainers.image.version="$VERSION" \
-          --platform linux/amd64,linux/arm64 \
-          --tags latest,$VERSION \
-          >> $GITHUB_ENV
+        crane auth login $REGISTRY -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+        echo -n 'IMAGE_NAME=' >> $GITHUB_ENV
+        skaffold build \
+          --build-image ghcr-actions-test \
+          --file-output ${{ runner.temp }}/skaffold-artifacts.json \
+          --output '{{range .Builds}}{{ if eq .ImageName "ghcr-actions-test" }}{{.Tag}}{{end}}{{end}}' \
+          --profile release \
+          --push \
+          --quiet \
+          --tag $VERSION >> $GITHUB_ENV
+        skaffold render
       env:
-        KO_DOCKER_REPO: ${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}
+        SKAFFOLD_DEFAULT_REPO: ${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}
+
+    - name: Render release manifest
+      run: |
+        skaffold render \
+          --build-artifacts ${{ runner.temp }}/skaffold-artifacts.json \
+          --digest-source none \
+          --output ghcr-actions-test_manifest.yaml \
+          --profile release \
+
+    - name: Create checksums
+      run: shasum -a 256 ghcr-actions-test_* > SHA256SUMS
 
     - name: Create release body file
       run: |
@@ -140,15 +177,15 @@ jobs:
 
         GitHub Container Registry:
 
-            $REGISTRY/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}
+            $IMAGE_NAME
         EOF
 
     - name: Set image name in Kubernetes resource spec
       run: |
         kpt fn eval manifests \
-          --image gcr.io/kpt-fn/apply-setters:v0.1.1@sha256:d2a0219b24a47ebb4bf568d3ccf5bb0e7be2f3f94b28b0c3b1bed011a51d7c35 \
+          --image gcr.io/kpt-fn/apply-setters:v0.2 \
           -- \
-          "image=$REGISTRY/$IMAGE_REPO:$VERSION@${IMAGE_NAME_WITH_DIGEST##*@}"
+          "image=$IMAGE_NAME"
 
     - name: Update version in readme
       run: |
@@ -216,6 +253,16 @@ jobs:
         asset_path: ghcr-actions-test_Linux_aarch64
         asset_name: ghcr-actions-test_Linux_aarch64
         asset_content_type: application/octet-stream
+
+    - name: Upload manifest file
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ghcr-actions-test_manifest.yaml
+        asset_name: ghcr-actions-test_manifest.yaml
+        asset_content_type: application/x-yaml
 
     - name: Upload checksum file
       uses: actions/upload-release-asset@v1
