--- a/manifests/pod.yaml
+++ b/manifests/pod.yaml
@@ -5,4 +5,4 @@ metadata:
 spec:
   containers:
   - name: hello
-    image: ko://github.com/halvards/ghcr-actions-test # kpt-set: ${image}
+    image: ghcr-actions-test # kpt-set: ${image}
