Fix image name output take 2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,14 +145,13 @@ jobs:
 
     - name: Build and push container image
       run: |
-        crane auth login $REGISTRY -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
-        echo -n 'IMAGE_NAME=' >> $GITHUB_ENV
+        crane auth login ${{ env.REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
         skaffold build \
           --build-image ghcr-actions-test \
           --file-output ${{ runner.temp }}/skaffold-artifacts.json \
           --profile release \
           --push \
-          --tag $VERSION >> $GITHUB_ENV
+          --tag $VERSION
       env:
         SKAFFOLD_DEFAULT_REPO: ${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}
 
