--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
     env:
       REGISTRY: ghcr.io
       CGO_ENABLED: '0'
+      COSIGN_VERSION: v1.4.1
       GGCR_VERSION: v0.7.0
       KUSTOMIZE_VERSION: v4.4.1
       SKAFFOLD_VERSION: 524a6b3914101af15fadf2eb3489e578a9c71f78
@@ -40,6 +41,7 @@ jobs:
 
     permissions:
       contents: write
+      id-token: write
       packages: write
 
     steps:
@@ -49,7 +51,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v1
       with:
-        go-version: 1.16
+        go-version: 1.17
 
     - name: Restore dependency cache
       uses: actions/cache@v2
@@ -132,10 +134,10 @@ jobs:
 
     - name: Build binaries
       run: |
-        GOOS=darwin GOARCH=amd64 go build -o ghcr-actions-test_Darwin_x86_64 .
-        GOOS=darwin GOARCH=arm64 go build -o ghcr-actions-test_Darwin_arm64 .
-        GOOS=linux GOARCH=amd64 go build -o ghcr-actions-test_Linux_x86_64 .
-        GOOS=linux GOARCH=arm64 go build -o ghcr-actions-test_Linux_aarch64 .
+        GOOS=darwin GOARCH=amd64 go build -v -trimpath -ldflags="-s -w" -o ghcr-actions-test_Darwin_x86_64 .
+        GOOS=darwin GOARCH=arm64 go build -v -trimpath -ldflags="-s -w" -o ghcr-actions-test_Darwin_arm64 .
+        GOOS=linux  GOARCH=amd64 go build -v -trimpath -ldflags="-s -w" -o ghcr-actions-test_Linux_x86_64 .
+        GOOS=linux  GOARCH=arm64 go build -v -trimpath -ldflags="-s -w" -o ghcr-actions-test_Linux_aarch64 .
 
     - name: Authenticate to container image registry
       run: |
@@ -164,6 +166,16 @@ jobs:
       run: |
         echo -n IMAGE_NAME= >> $GITHUB_ENV
         echo $(jq -r '.builds[] | select(.imageName=="ghcr-actions-test") | .tag' ${{ runner.temp }}/skaffold-artifacts.json) >> $GITHUB_ENV
+
+    - name: Install Cosign
+      uses: sigstore/cosign-installer@main
+      with:
+        cosign-release: ${{ env.COSIGN_VERSION }}
+
+    - name: Sign the images with GitHub OIDC Token
+      run: cosign sign --force --recursive --upload $IMAGE_NAME
+      env:
+        COSIGN_EXPERIMENTAL: 1
 
     - name: Create checksums file
       run: shasum -a 256 ghcr-actions-test_* > SHA256SUMS
