--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,10 +128,6 @@ jobs:
         echo SOURCE=${{ github.server_url }}/${{ github.repository }}.git >> $GITHUB_ENV
         echo URL=${{ github.server_url }}/${{ github.repository }} >> $GITHUB_ENV
 
-    - name: Set Go flags
-      run: |
-        echo GOFLAGS="-v -trimpath -ldflags=-s" >> $GITHUB_ENV
-
     - name: Build binaries
       run: |
         GOOS=darwin GOARCH=amd64 go build -v -trimpath -ldflags="-s -w" -o ghcr-actions-test_Darwin_x86_64 .
@@ -141,18 +137,16 @@ jobs:
 
     - name: Authenticate to container image registry
       run: |
-        crane auth login ${{ env.REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+        crane auth login ${{ env.REGISTRY }} -u ${{ github.actor }} -p ${{ github.token }}
 
-    - name: Build and push container image
+    - name: Build and push container images
       run: |
         skaffold build \
-          --build-image ghcr-actions-test \
           --file-output ${{ runner.temp }}/skaffold-artifacts.json \
           --profile release \
-          --push \
-          --tag $VERSION
+          --push
       env:
-        SKAFFOLD_DEFAULT_REPO: ${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}
+        SKAFFOLD_DEFAULT_REPO: ${{ env.REGISTRY }}/${{ github.repository_owner }}
 
     - name: Render release manifest
       run: |
@@ -215,7 +209,7 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         tag_name: ${{ env.VERSION }}
         release_name: ${{ env.VERSION }}
@@ -225,7 +219,7 @@ jobs:
     - name: Upload binary darwin amd64
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ghcr-actions-test_Darwin_x86_64
@@ -235,7 +229,7 @@ jobs:
     - name: Upload binary darwin arm64
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ghcr-actions-test_Darwin_arm64
@@ -245,7 +239,7 @@ jobs:
     - name: Upload binary linux amd64
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ghcr-actions-test_Linux_x86_64
@@ -255,7 +249,7 @@ jobs:
     - name: Upload binary linux arm64
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ghcr-actions-test_Linux_aarch64
@@ -265,7 +259,7 @@ jobs:
     - name: Upload manifest file
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ghcr-actions-test_manifest.yaml
@@ -275,7 +269,7 @@ jobs:
     - name: Upload checksum file
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: SHA256SUMS
