--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -162,6 +162,10 @@ jobs:
         echo -n IMAGE_NAME= >> $GITHUB_ENV
         echo $(jq -r '.builds[] | select(.imageName=="ghcr-actions-test") | .tag' ${{ runner.temp }}/skaffold-artifacts.json) >> $GITHUB_ENV
 
+    - name: Update latest tag
+      run: |
+        crane tag $IMAGE_NAME latest
+
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
       with:
