--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -199,16 +199,10 @@ jobs:
         kustomize edit set image "ghcr-actions-test=$IMAGE_NAME"
       working-directory: manifests
 
-    - name: Install kubectl
-      uses: azure/setup-kubectl@v2.0
-
     - name: Update kpt setter values file
-      run: |
-        tmpfile=$(mktemp)
-        kubectl patch --dry-run=client --filename setters.yaml --local=true --output yaml --patch "{\"data\":{\"imag
-e\":\"$IMAGE_NAME\"}}" > $tmpfile
-        mv $tmpfile setters.yaml
-      working-directory: manifests
+      uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.10
+      with:
+        args: fn eval manifests --image gcr.io/kpt-fn/search-replace:v0.2 --include-meta-resources --match-kind ConfigMap --match-name setters --truncate-output=false -- by-path=data.image put-value=$IMAGE_NAME
 
     - name: Update version in readme
       run: |
