--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -197,9 +197,12 @@ jobs:
       working-directory: manifests
 
     - name: Update kpt setter values file
-      uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.10
-      with:
-        args: fn eval manifests --image gcr.io/kpt-fn/search-replace:v0.2 --include-meta-resources --match-kind ConfigMap --match-name setters --truncate-output=false -- by-path=data.image put-value=$IMAGE_NAME
+      run: |
+        tmpfile=$(mktemp)
+        kubectl patch --dry-run=client --filename setters.yaml --local=true --output yaml --patch '{"data":{"imag
+e":"${{ env.IMAGE_NAME "}}' > $tmpfile
+        mv $tmpfile setters.yaml
+      working-directory: manifests
 
     - name: Update version in readme
       run: |
